<resources>
    <string name="app_name">Cechini</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_sign_in_short">Zaloguj</string>
    <string name="error_invalid_email">Login jest niepoprawny</string>
    <string name="error_invalid_password">Hasło jest za krótkie</string>
    <string name="error_incorrect_password">Hasło jest niepoprawne</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_item_list">Twoje sklepy</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="cechini">Cechini</string>
    <string name="title_activity_trasowka">TrasowkaActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="z_a">2L NGAZ</string>
    <string name="z_b">2l GAZ</string>
    <string name="z_c">0,33L</string>
    <string name="z_d">CYTRYNA</string>
    <string name="z_e">GRATISY</string>
    <string name="z_f">2L NGAZ (BIAŁA)</string>
    <string name="z_g">0,75L SPORT</string>
    <string name="z_h">0,33L SZKŁO</string>

    <string name="warehouse">Hurtownia</string>
</resources>
