<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.costrella.android.cechini.activities.RaportActivity">

    <ProgressBar
        android:id="@+id/raport_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="0dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Opis"
                android:id="@+id/textView3"
                android:layout_above="@+id/scrollView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.79"
                android:ems="10"
                android:inputType="textMultiLine"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/z_a"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/z_a" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/z_b"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/z_b" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/z_c"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/z_c" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/z_d"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/z_d" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/z_e"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/z_e" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/z_f"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/z_f" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/z_g"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/z_g" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/z_h"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/z_h" />
            </android.support.design.widget.TextInputLayout>

            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <ImageButton
                    android:id="@+id/btnImg1"
                    android:src="@android:drawable/ic_menu_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_row="0"
                    android:textAlignment="center" />

                <ImageButton
                    android:id="@+id/btnImg2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_row="1"
                    android:src="@android:drawable/ic_menu_gallery"
                    />

                <ImageButton
                    android:id="@+id/btnImg1a"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@android:drawable/ic_menu_camera"
                    android:layout_column="8"
                    android:layout_row="0"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/btnImg2a"
                    android:src="@android:drawable/ic_menu_camera"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_column="8"
                    android:layout_row="1"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/btnImg3a"
                    android:src="@android:drawable/ic_menu_camera"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_column="8"
                    android:layout_row="2"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitXY"
                    android:layout_column="10"
                    android:layout_margin="5dp"
                    android:layout_row="0"
                    android:background="#413a3a" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitXY"
                    android:layout_column="10"
                    android:layout_margin="5dp"
                    android:layout_row="1"
                    android:adjustViewBounds="false"
                    android:background="#413a3a" />

                <ImageButton
                    android:id="@+id/btnImg3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_row="2"
                    android:src="@android:drawable/ic_menu_gallery"
                    />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitXY"
                    android:layout_column="10"
                    android:layout_margin="5dp"
                    android:layout_row="2"
                    android:background="#413a3a" />

            </GridLayout>




            <Button
                android:id="@+id/btnSend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="WYŚLIJ"
                android:background="#0095ff" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
